llvm-toolchain-3.5 (1:3.5~+rc2-2) UNRELEASED; urgency=medium

  * Cherry-pick to commit from upstream (revisions 214906 214907)
    to improve the gcc compat
  * Remove scan-build-clang-path.diff (applied upstream)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 09 Aug 2014 22:36:06 +0200

llvm-toolchain-3.5 (1:3.5~+rc2-1) unstable; urgency=medium

  * Fix the version
  * try to build lldb-gdbserver under kfreebsd (kfreebsd-lldb-gdbserver.diff)
  * Second try to fix build under HURD (hurd-EIEIO-undef.diff)

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 08 Aug 2014 10:42:13 +0200

llvm-toolchain-3.5 (1:3.5~+rc2-1~exp1) unstable; urgency=medium

  * New snapshot release
  * Enable compressed debug sections (Closes: #757002)
  * Force scan-build to use the same version of clang
  * Bring back scan-build-search-path.diff (Closes: #757219)

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 04 Aug 2014 13:35:35 +0200

llvm-toolchain-3.5 (1:3.5~+rc1-3~exp1) experimental; urgency=medium

  * SVN branched. Update the Vcs- flags.
  * Co installation of clang (Closes: #736057)
    - scan-build => scan-build-3.5
    - scan-view => scan-view-3.5
    - asan_symbolize => asan_symbolize-3.5
  * Remove of pollycc
  * clang alternatives are managed by llvm-defaults

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 31 Jul 2014 18:12:59 +0200

llvm-toolchain-3.5 (1:3.5~+rc1-2) unstable; urgency=medium

  * Sync with 3.4 svn to retrieve some changes:
  * Replace $(CURDIR)/debian/tmp by a variable
  * Move the polly installation in the dh_auto_install rules instead
    of using *.install files. In llvm.org/apt/, I have to sometime disable
    polly
  * hurd-EIEIO-undef.diff: try to undef an errno.h to fix the ftbfs
  * clang-X suggests clang-X-doc (Closes: #755922)
  * Manage all files using .in mecanism. It will simplify the upgrade of
    version
  * Disable lldb for ppc64el. Thanks to Dimitri John Ledkov (Closes: #756380)