@@ -3,6 +3,7 @@ llvm-toolchain-3.5 (1:3.5~+rc2-2) UNRELEASED; urgency=medium
   * Cherry-pick to commit from upstream (revisions 214906 214907)
     to improve the gcc compat
   * Remove scan-build-clang-path.diff (applied upstream)
+  * Just like in 3.4, bring back lldb & lldb-dev under mips & mipsel
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 09 Aug 2014 22:36:06 +0200
 
